--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -117,7 +117,10 @@ body {
 
 .fade-leave,
 .fade-enter-to {
-    opacity: 1
+  opacity: 1
 }
 
-
+.topScroll-enter-active,
+.topScroll-leave-active {
+  transition: top .3s
+}
