--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -124,3 +124,14 @@ body {
 .topScroll-leave-active {
   transition: top .3s
 }
+
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+  }
+}
